@@ -1,11 +1,11 @@
 Package: spider
 Type: Package
 Title: Species Identity and Evolution in R
-Version: 1.3-0
-Date: 2013-12-25
+Version: 1.4-0
+Date: 2016-06-20
 Author: Samuel Brown, Rupert Collins, Stephane Boyer, Marie-Caroline Lefort, Jagoba Malumbres-Olarte, Cor Vink, Rob Cruickshank
 Maintainer: Samuel Brown <s_d_j_brown@hotmail.com>
-Description: A package for the analysis of species limits and DNA barcoding data
+Description: Provides functions for the analysis of species limits and DNA barcoding data.
 License: GPL
 LazyLoad: yes
 Depends: ape, pegas
