@@ -4,7 +4,7 @@
 exportPattern("^[^\\.]")
 
 # Import all packages listed as Imports or Depends
-importFrom(ape, dist.dna, base.freq, seg.sites)
+importFrom(ape, dist.dna, base.freq, seg.sites, as.DNAbin, prop.part, nj, boot.phylo, root, unroot, node.depth)
 importFrom(pegas, haplotype)
 importFrom(graphics, plot)
 
@@ -12,3 +12,4 @@ importFrom(graphics, plot)
 #S3 methods
 S3method(plot, slidWin)
 S3method(plot, haploAccum)
+S3method(plot, ordinDNA)
