@@ -1,9 +1,0 @@
-* Edit the help file skeletons in 'man', possibly combining help files
-  for multiple functions.
-* Put any C/C++/Fortran code in 'src'.
-* If you have compiled code, add a .First.lib() function in 'R' to load
-  the shared library.
-* Run R CMD build to build the package tarball.
-* Run R CMD check to check the package tarball.
-
-Read "Writing R Extensions" for more information.
