@@ -18,7 +18,7 @@ More information, including a tutorial on the use of spider can be found at \cod
 Package: \tab spider\cr
 Type: \tab Package\cr
 Version: \tab 1.3-0\cr
-Date: \tab 2013-12-25\cr
+Date: \tab 2016-06-20\cr
 License: \tab GPL\cr
 LazyLoad: \tab yes\cr
 }
@@ -32,7 +32,7 @@ Sliding window:
 \code{\link{slidingWindow}}, \code{\link{slideAnalyses}}, \code{\link{slideBoxplots}}.
 
 Nucleotide diagnostics:
-\code{\link{nucDiag}}.
+\code{\link{nucDiag}}, \code{\link{rnucDiag}}.
 
 Morphological techniques:
 \code{\link{paa}}.
