@@ -1,4 +1,13 @@
 ############################################
+                                SPIDER VERSION 1.4-0
+				Released 20 June 2016
+				
+				
+-- Bugs in heatmapSpp and plot.ordinDNA fixed
+-- New option "names" added for bestCloseMatch and threshID
+-- New functions: rnucDiag, blockAlignment, and minInDist
+
+############################################
                                 SPIDER VERSION 1.3-0
 				Released 25 December 2013
 				
